# llm-wiki

./: .env.sample  .gitignore  Dockerfile  README.md  README_ENG.md  USAGE.md  docker-compose.yml  index.md  pyproject.toml  to_upgrade_plan.md  변경안.md  코드동작.md
.code-planner/: 01-ideation-approved.json  01-ideation-living-note.md
docs/: 01_cli_features.md  03_schema_and_ontology.md
samples/: rag.md  short-note.md
schema/: AGENTS.md
tests/: __init__.py  conftest.py  run_phase1.py  run_phase2.py  test_chunked_extraction.py  test_cli_command_surface.py  test_cli_inbox.py  test_cli_wiki_ingest.py  test_converter_adapter.py  test_inbox_domain.py  test_inbox_registration.py  test_inbox_to_job_mapping.py  test_ingest_pipeline.py  test_init_settings_doctor.py  test_korean_default_prompts.py  test_llm_json_repair.py  test_models_placeholders_ops.py  test_normalize_chunk_embed.py  test_parsers.py  test_phase1_runtime_mcp_changelog.py  test_phase2_candidates_schema.py  test_phase2_schema_quality.py  test_phase3_fresh_start_guidance.py  test_phase4_local_llm_runtime.py  test_phase4_review_failed_workbench.py  test_relinking.py  test_section_chunking.py  test_staged_lint_gate.py  test_two_pass_generation.py  test_vector_search.py  test_web_ask.py  test_web_ask_modes.py  test_web_auth.py  test_web_dashboard.py  test_web_decide.py  test_web_navigation.py  test_web_onboarding_vault.py  test_web_phase3_approved_contracts.py  test_web_phase3_fix.py  test_web_phase3_normal_operation.py  (+14 more)
testset/: AlexsJones-Ilmfit.md  systima-claude-code-vs-opencode-token-overhead.md
(+253 files in other folders)
