[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki-local"
version = "0.1.0"
description = "Phase 1 CLI foundation for a local LLM wiki workspace"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
  {name = "LLM Wiki Local"}
]
dependencies = [
  "fastembed>=0.8,<0.9",
  "fastapi>=0.116,<1",
  "uvicorn>=0.35,<1",
  "jinja2>=3.1,<4",
  "PyYAML>=6,<7",
  "python-multipart>=0.0.20,<1",
  "pydantic>=2.11,<3",
  "python-dotenv>=1.1,<2",
  "jsonschema>=4,<5",
  "markitdown[pdf,docx,pptx,xlsx,xls]>=0.1.6,<0.2",
  "pypdf>=6,<7",
  "python-docx>=1.2,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
]

[project.scripts]
wiki = "llm_wiki.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
